# AskFlashModular

./: .gitignore  IMPLEMENTATION_STATUS.md  README.md  SCAFFOLDING_COMPLETE.md  docker-compose.yml  env-template.txt
AskFlash-Legacy-Export/: EXPORT_INVENTORY.md  LEGACY_EXPORT_GUIDE.md  askflash-complete.bundle
AskFlash-Legacy-Export/configs/: docker-compose.poetry.yml  docker-compose.yml  env-template.txt  package-lock.json  package.json  pyproject.toml  requirements-base.txt  requirements-features.txt
AskFlash-Legacy-Export/configs/alembic/: env.py
AskFlash-Legacy-Export/configs/alembic/versions/: 1a062455208a_drop_response_format_column_from_.py  243935d139fa_create_integration_table.py  6693e3dae783_initial_migration.py  conv_persistence_migration.py  fix_integration_types.py  migrate_ruleset_to_integrations.py
AskFlash-Legacy-Export/root-docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LEGACY_ARCHITECTURE_ANALYSIS.md  README.md
containers/adaptive-engine.container/: Dockerfile  README.md  main.py  requirements.txt
containers/ai-orchestrator.container/: README.md  main.py  requirements.txt
containers/analytics.container/: Dockerfile  README.md  requirements.txt
containers/authentication.container/: Dockerfile  main.py  requirements.txt
containers/conversation.container/: Dockerfile  README.md  main.py  requirements.txt
containers/embedding.container/: Dockerfile  README.md  main.py  requirements.txt
containers/executor-agent.container/: Dockerfile  main.py  requirements.txt
containers/frontend.container/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
containers/gateway.container/: Dockerfile  README.md  main.py  requirements.txt
containers/intent-agent.container/: Dockerfile  README.md  main.py  requirements.txt
containers/local-llm.container/: README.md
containers/mcp.container/: Dockerfile  main.py  requirements.txt
containers/moderator-agent.container/: Dockerfile  main.py  requirements.txt
containers/project-manager.container/: Dockerfile  README.md  main.py  requirements.txt
containers/websearch-agent.container/: Dockerfile  main.py  requirements.txt
docs/architecture/: CONTAINER_OVERVIEW.md
docs/archive/: CHATGPT_CONTEXT_README.md
docs/changelog/: 2024-12-27_phase1_infrastructure_enhancement.md  2024-12-27_phase2_mcp_core_implementation.md  2024-12-27_phase3_agent_containers.md  2024-12-27_phase4_architecture_completion.md  IMPLEMENTATION_STATUS.md
docs/demo/: Project_Architecture_Brief_Template.md
shared/: redis_manager.py
test-scripts/: requirements.txt  test_phase1_infrastructure.py  test_phase2_mcp_core.py  test_phase3_agents.py
(+169 files in other folders)
